--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html> 
 <head>
-<style ty>
+<style>
+    *{
+        font-family: Lora, Merriweather;
+head{
+background-color: #000;
+    color: #FFF;
+}
+body{
+    color: #000;
+    background-color: #FFF;
+}
+h1{
+}
+h1,h2, h3,h4{
+    font-weight: 700;
+    line-height: 140%; 
+}
+h1{ font-size: 48px; letter-spacing: -1.92px; }
+h2{ font-size: 20px; font-weight: normal; letter-spacing: 0.8px;  }
+h3{ font-size: 28px; letter-spacing: -1.12px; }
+h4{ font-size: 48px; font-family: Merriweather; letter-spacing: -0.36px; }
+    <style>
 </head>
     <body>
         <head>
