--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     *{
         font-family: Lora, Merriweather;
 head{
-background-color: #000;
+   background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
     color: #FFF;
 }
 body{
