--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h4{ font-size: 48px; font-family: Merriweather; letter-spacing: -0.36px; }
         <head>
             <h1>Peter Roper</h1>
             <h2>Product Designer</h2>
-            <img src="" />
+            <img src="/imgs/avatar.png" />
         </head>
         <div class="content">
             <p class="l"><b>>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
