--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@ h1,h2, h3,h4{
 h1{ font-size: 48px; letter-spacing: -1.92px; }
 h2{ font-size: 20px; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 28px; letter-spacing: -1.12px; }
-h4{ font-size: 48px; font-family: Merriweather; letter-spacing: -0.36px; }
+h4{ font-size: 48px; font-family: Merriweather; letter-spacing: -0.36px; 
+  .slider{
+     display: flex;
+width: 1376px;
+padding: 5px 0px;
+align-items: flex-start;
+gap: 18.123px;
+  }
     <style>
 </head>
     <body>
