--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <style>
     *{
         font-family: Lora, Merriweather;
-head{
+.header{
    background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
     color: #FFF;
 }
@@ -31,11 +31,11 @@ gap: 18.123px;
     <style>
 </head>
     <body>
-        <head>
+        <div class="header">
             <h1>Peter Roper</h1>
             <h2>Product Designer</h2>
             <img src="/imgs/avatar.png" />
-        </head>
+        </div>
         <div class="content">
             <p class="l"><b>>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
 I have been creating digital products since the very early days of the internets transition into visual design. text goes here</p>
