--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <style>
     *{
         font-family: Lora, Merriweather;
+    }
 .header{
    background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
     color: #FFF;
@@ -10,8 +11,6 @@
 body{
     color: #000;
     background-color: #FFF;
-}
-h1{
 }
 h1,h2, h3,h4{
     font-weight: 700;
@@ -28,7 +27,7 @@ padding: 5px 0px;
 align-items: flex-start;
 gap: 18.123px;
   }
-    <style>
+    </style>
 </head>
     <body>
         <div class="header">
@@ -37,7 +36,7 @@ gap: 18.123px;
             <img src="/imgs/avatar.png" />
         </div>
         <div class="content">
-            <p class="l"><b>>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
+            <p class="l"><b>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
 I have been creating digital products since the very early days of the internets transition into visual design. text goes here</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider. More information on my background in design is covered in my portfolio slideshow</p>
             <div class="posts">
