--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ padding: 5px 0px;
 align-items: flex-start;
 gap: 18.123px;
   }
-    <style>
+    </style>
 </head>
     <body>
         <div class="header">
@@ -37,7 +37,7 @@ gap: 18.123px;
             <img src="/imgs/avatar.png" />
         </div>
         <div class="content">
-            <p class="l"><b>>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
+            <p class="l"><b>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>
 I have been creating digital products since the very early days of the internets transition into visual design. text goes here</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider. More information on my background in design is covered in my portfolio slideshow</p>
             <div class="posts">
