--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <style>
     *{
         font-family: Lora, Merriweather;
+       padding: 0;
+       margin: 0;
+       font-size: 16px;
+    }
 .header{
    background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
     color: #FFF;
@@ -62,20 +66,20 @@ I have been creating digital products since the very early days of the internets
             <div id="slidedeck" class="slider">
                 <h4>Portfolio Slides</h4>
                 <div class="slider">
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
                 </div>
             </div>
             <!--  ends -->
             <div id="casestudies" class="slider">
                 <h4>Portfolio Slides</h4>
                 <div class="slider">
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
-                    <span> style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
+                    <span style="background-image: url();"</span>
                 </div>
             </div>
             <!-- casestudies ends -->
@@ -86,6 +90,7 @@ I have been creating digital products since the very early days of the internets
                 </div>
             </div>
             <!-- casestudies ends -->
-        </div>    
+        </div>  
+        <!-- body end -->
     </body>
 </html>
