--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@ body{
     color: #000;
     background-color: #FFF;
 }
+.showcase,
+.img, 
+img {
+        background-color: #E3E9F0;
+}
+.showcase{
+ border-top-radius: 16px;
+}
+.img, img {
+border-radius: 16px;
+}
 .content,
 .header{
    padding-left: 324px;
@@ -29,14 +40,26 @@ p.l{ font-size: 24px; line-height: 140%; letter-spacing: -0.48px; }
 h1{ font-size: 48px; letter-spacing: -1.92px; }
 h2{ font-size: 20px; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 28px; letter-spacing: -1.12px; }
-h4{ font-size: 48px; font-family: Merriweather; letter-spacing: -0.36px; }
+h4{ font-size: 18px; font-family: Merriweather; letter-spacing: -0.36px; }
 .content > div{
    margin: 0 0 48px 0;
 }
 .intro p{
    margin: 0 0 36px 0;
 }
-
+.posts .post{
+display: flex;
+padding: 16px 0px;
+align-items: center;
+gap: 24px;
+flex: 1 0 0;
+}
+.posts .post .img,
+.posts .post img{
+width: 104px;
+height: 68px;
+display: block;
+}
 .slider{
      display: flex;
 width: 1376px;
@@ -44,6 +67,12 @@ padding: 5px 0px;
 align-items: flex-start;
 gap: 18.123px;
   }
+ .slider .img,
+.slider img{
+width: 398.907px;
+height: 224.385px;
+flex-shrink: 0;
+}
     </style>
 </head>
     <body>
