--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ img {
 .img, img {
 border-radius: 16px;
 }
+.posts .img, 
+.posts img{
+border-radius: 8px;
+}
 .content,
 .header{
    padding-left: 324px;
@@ -41,6 +45,10 @@ h1{ font-size: 48px; letter-spacing: -1.92px; }
 h2{ font-size: 20px; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 28px; letter-spacing: -1.12px; }
 h4{ font-size: 18px; font-family: Merriweather; letter-spacing: -0.36px; }
+.posts p{ font-size: 14px; line-height: 140%; letter-spacing: -0.28px; }
+.header{
+height: 274px;
+}
 .content > div{
    margin: 0 0 48px 0;
 }
@@ -59,6 +67,11 @@ flex: 1 0 0;
 width: 104px;
 height: 68px;
 display: block;
+}
+.posts p{
+display: flex;
+flex-direction: column;
+align-self: stretch;
 }
 .slider{
      display: flex;
