--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h1,h2, h3,h4{
     line-height: 140%; 
    font-family: Lora;
 }
-p.l{ font-size: 24px; line-height: 140%; letter-spacing: -0.48px; }
+p.l, p.l b{ font-size: 24px; line-height: 140%; letter-spacing: -0.48px; }
 h1{ font-size: 48px; letter-spacing: -1.92px; }
 h2{ font-size: 20px; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 28px; letter-spacing: -1.12px; }
