--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ line-height: 160%;
 .header{
    padding-left: 324px;
 }
+.content{
+    padding: 36px 0;
+}
 / * / FONT //////////////////// */
 h1,h2, h3,h4{
     font-weight: 700;
@@ -39,6 +42,10 @@ background-color: #FFF;
 img {
 background-color: #E3E9F0;
 }
+.img.e1{
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0.08);
+
+}
 / * / RADIUS //////////////////// */
 .showcase{
 border-top-radius: 16px;
@@ -49,6 +56,14 @@ border-radius: 16px;
 .posts .img, 
 .posts img{
 border-radius: 8px;
+}
+.slider .img:first-of-type{
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+}
+.slider .img:last-of-type{
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
 }
 / * / HEADER //////////////////// */
 .header{
@@ -142,20 +157,20 @@ flex-shrink: 0;
             <div id="slidedeck">
                 <h4>Portfolio Slides</h4>
                 <div class="slider">
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
                 </div>
             </div>
             <!--  ends -->
             <div id="casestudies">
                 <h4>Portfolio Slides</h4>
                 <div class="slider">
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
-                    <span class="img" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
+                    <span class="img e1" style="background-image: url();"></span>
                 </div>
             </div>
             <!-- casestudies ends -->
