--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@ p.l, p.l b{ font-size: 24px; line-height: 140%; letter-spacing: -0.48px; }
 .posts p{ font-size: 14px; line-height: 140%; letter-spacing: -0.28px; }
 /*/ STYLE ////////////////////*/
 #posts h4, #posts h4 a{
-    color: #346672;
-}
-.header{
-background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
-color: #FFF;
+color: #346672;
 }
 body{
 color: #000;
+}
+/*/ BACKGROUNDS ////////////////////*/
+body{
 background-color: #FFF;
 }
 .showcase,
@@ -45,6 +44,7 @@ background-color: #FFF;
 img {
 background-color: #E3E9F0;
 }
+/*/ BOX SHADOW ////////////////////*/
 .img.e1{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0.08);
 
