--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ line-height: 160%;
 }
 .content,
 .header{
-   padding-left: 324px;
+   padding-left: 324px!important;
 }
 .content{
     padding: 36px 0;
