--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ color: #000;
 body{
 background-color: #FFF;
 }
-.showcase,
+#showcase .scrollable,
 .img, 
 img {
 background-color: #E3E9F0;
@@ -50,7 +50,7 @@ background-color: #E3E9F0;
 
 }
 /*/ RADIUS ////////////////////*/
-.showcase{
+#showcase .scrollable{
 border-top-radius: 16px;
 }
 .img, img {
@@ -126,6 +126,11 @@ overflow-x: visible;
 .slider img{
 width: 398.907px;
 height: 224.385px;
+flex-shrink: 0;
+}
+#showcase .scrollable{
+width: 100%;
+height: 800px;
 flex-shrink: 0;
 }
 </style>
