--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ background-color: #FFF;
 img {
 background-color: #E3E9F0;
 }
+.header{
+background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
+}
 /*/ BOX SHADOW ////////////////////*/
 .img.e1{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0.08);
