--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ color: #346672;
 body{
 color: #000;
 }
+.header{
+    color: #FFF;
+}
 /*/ BACKGROUNDS ////////////////////*/
 body{
 background-color: #FFF;
