--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 }
 /*/ RADIUS ////////////////////*/
 #showcase .scrollable{
-border-top-radius: 16px;
+border-radius: 16px 0 0 0;
 }
 .img, img {
 border-radius: 16px;
@@ -67,12 +67,10 @@ border-radius: 16px;
 border-radius: 8px;
 }
 .slider .img:first-of-type{
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
+border-radius: 16px 0 0 16px;
 }
 .slider .img:last-of-type{
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
+border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
 .header{
