--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ border-radius: 16px;
 .posts img{
 border-radius: 8px;
 }
-.slider .img:first-of-type{
+.slider .img:first-child{
 border-radius: 16px 0 0 16px;
 }
-.slider .img:last-of-type{
+.slider .img:last-child{
 border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
