--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ border-radius: 16px 0 0 0;
 .img, img {
 border-radius: 16px;
 }
-.posts .img, 
-.posts img{
+#posts .img, 
+#posts img{
 border-radius: 8px;
 }
 .slider .img:first-child{
@@ -87,11 +87,11 @@ margin: 0 0 48px 0;
 max-width: 724px;
 }
 #intro p{
-   margin: 0 0 36px 0;
+margin: 0 0 36px 0;
 }
 #intro p b{
-    display: block;
-    margin: 0 0 16px 0;
+display: block;
+margin: 0 0 16px 0;
 }
 /*/ POSTS ////////////////////*/
 #posts .post{
