--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@ line-height: 160%;
 .header{
    padding-left: 324px!important;
 }
+.header{
+height: 274px;
+}
 .content{
-    padding: 36px 0;
+    padding: 36px 0 0 0;
+}
+.content > div{
+margin: 0 0 48px 0;
+}
+.content > div:last-of-type{
+    margin: 0;
 }
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
@@ -73,12 +82,7 @@ border-radius: 16px 0 0 16px;
 border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
-.header{
-height: 274px;
-}
-.content > div{
-margin: 0 0 48px 0;
-}
+
 /*/ INTRO ////////////////////*/
 #intro{
 max-width: 724px;
