--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ border-radius: 16px 0 0 16px;
 border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
-
+.header h1, .header h2{
+line-height: 100%;
+}
 /*/ INTRO ////////////////////*/
 #intro{
 max-width: 724px;
