--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ flex-shrink: 0;
             </div>
             <!--  ends -->
             <div id="casestudies">
-                <h3>Portfolio Slides</h3>
+                <h3>Case Studies</h3>
                 <div class="slider">
                     <span class="img e1" style="background-image: url();"></span>
                     <span class="img e1" style="background-image: url();"></span>
