--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ background-color: #E3E9F0;
 .header{
 background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
 }
-#posts .posts > div{
+#posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
 /*/ BOX SHADOW ////////////////////*/
