--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ flex-shrink: 0;
          
         <!-- intro -->
         <div id="intro">
-            <p class="l"><b>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>I have been creating digital products since the very early days of the internets transition into visual design. text goes here</p>
+            <p class="l"><b>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>I have been creating digital products since the very early days of the internets transition into visual design.</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider. More information on my background in design is covered in my portfolio slideshow</p>
         </div>
         <!-- intro ends -->
