--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ border-radius: 0 16px 16px 0;
 .header h1, .header h2{
 line-height: 100%;
 }
+.header img{
+width: 313.921px;
+height: 249.733px;
+flex-shrink: 0;
+position: absolute;
+bottom: 68px;
+left: 40px;
+}
 /*/ INTRO ////////////////////*/
 #intro{
 max-width: 724px;
