--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@ margin: 0 0 48px 0;
 .content > div:last-of-type{
     margin: 0;
 }
+#posts,
+#intro{
+max-width: 724px;
+}
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
     font-weight: 700;
@@ -94,9 +98,6 @@ bottom: 68px;
 left: 40px;
 }
 /*/ INTRO ////////////////////*/
-#intro{
-max-width: 724px;
-}
 #intro p{
 margin: 0 0 36px 0;
 }
