--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ flex-shrink: 0;
 <div class="header">
         <h1>Peter Roper</h1>
         <h2>Product Designer</h2>
-        <img src="/imgs/avatar.png" />
+        <img src="/assets/imgs/avatar.png" />
 </div>
  <div class="content">
          
