--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html> 
 <head>
+    <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
+    <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <style>
 /*/ CORE ////////////////////*/
 *{
