--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@ margin: 0;
 font-size: 18px;
 line-height: 160%;
 }
-.content,
-.header{
-   padding-left: 324px!important;
-}
+
 .header{
 height: 274px;
 }
@@ -30,6 +27,12 @@ margin: 0 0 48px 0;
 #posts,
 #intro{
 max-width: 724px;
+}
+@media only screen and (min-width: 1024px) {
+.content,
+.header{
+   padding-left: 324px!important;
+}
 }
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
