--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
+.header img{
+    background-color: none!important;
+}
 /*/ BOX SHADOW ////////////////////*/
 .img.e1{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.04), 0px 1px 1px 0px rgba(0, 0, 0, 0.08);
@@ -91,6 +94,9 @@ border-radius: 16px 0 0 16px;
 border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
+.header{
+    position: relative;
+}
 .header h1, .header h2{
 line-height: 100%;
 }
