--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 font-family: Merriweather;
 padding: 0;
 margin: 0;
+border: 0;
 font-size: 18px;
 line-height: 160%;
 }
@@ -61,8 +62,8 @@ body{
 background-color: #FFF;
 }
 #showcase .scrollable,
-.img, 
-img {
+#posts .img, 
+#sliders img {
 background-color: #E3E9F0;
 }
 .header{
@@ -70,9 +71,6 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 }
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
-}
-.header img{
-    background-color: none!important;
 }
 /*/ BOX SHADOW ////////////////////*/
 .img.e1{
