--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ gap: 18px;
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
-overflow: -moz-scrollbars-horizontal;
+/*overflow: -moz-scrollbars-horizontal;*/
 white-space: nowrap;
   }
  .slider .img,
@@ -184,6 +184,7 @@ float: none !important;
     display: inline-block;
     vertical-align: top;
 }
+/*/ SHOWCASE ////////////////////*/
 #showcase .scrollable{
 width: 100%;
 height: 800px;
