--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@ max-width: 724px;
    padding-left: 324px!important;
 }
 }
+@media only screen and (max-width: 1024px) {
+.content,
+.header{
+   padding: 16px;
+}
+}
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
     font-weight: 700;
