--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@ border: 0;
 font-size: 18px;
 line-height: 160%;
 }
-
+.img{
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: 50%;
+}
 .header{
 height: 274px;
 }
