--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ max-width: 724px;
 }
 @media only screen and (min-width: 1024px) {
 .content,
-.header{
+.header div{
    padding-left: 324px!important;
 }
 }
