--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ line-height: 160%;
     background-size: 100% auto;
     background-position: 50%;
 }
-.header{
+.header div{
 height: 274px;
 }
 .content{
@@ -112,12 +112,12 @@ border-radius: 0 16px 16px 0;
 line-height: 100%;
 }
 .header img{
-width: 313.921px;
-height: 249.733px;
+width: 312px;
+height: 248px;
 flex-shrink: 0;
 position: absolute;
-bottom: 68px;
-left: 40px;
+bottom: 0px;
+left: 0px;
 }
 /*/ INTRO ////////////////////*/
 #intro p{
