--- a/index.html
+++ b/index.html
@@ -198,6 +198,9 @@ float: none !important;
     vertical-align: top;
 }
 /*/ SHOWCASE ////////////////////*/
+#showcase h3{
+    margin: 0 0 12px 0;
+}
 #showcase .scrollable{
 width: 100%;
 height: 800px;
