--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ gap: 18px;
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
-/*overflow: -moz-scrollbars-horizontal;*/
+overflow: -moz-scrollbars-horizontal;
 white-space: nowrap;
   }
  .slider .img,
