--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@ flex-shrink: 0;
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.png);"></span>
+                    <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.png);"></span>
                 </div>
             </div>
             <!--  ends -->
