--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@ max-width: 724px;
 .header div{
    padding-left: 324px!important;
 }
+.header img{
+position: absolute;
+bottom: 0px;
+left: 0px;
+}
 }
 @media only screen and (max-width: 1024px) {
 .content,
-.header{
+.header div{
    padding: 16px;
 }
 }
@@ -115,9 +120,6 @@ line-height: 100%;
 width: 312px;
 height: 248px;
 flex-shrink: 0;
-position: absolute;
-bottom: 0px;
-left: 0px;
 }
 /*/ INTRO ////////////////////*/
 #intro p{
