--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@ left: 0px;
 .header div{
    padding: 24px;
 }
+.header{
+display: flex;
+align-items: center;
+justify-content: center;
+}
 }
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
