--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <style>
 /*/ CORE ////////////////////*/
-*{
+*, body{
 font-family: Merriweather;
 padding: 0;
 margin: 0;
 border: 0;
 font-size: 18px;
 line-height: 160%;
+overflow: initial;
+-webkit-font-smoothing: subpixel-antialiased !important;
 }
 .img{
     background-repeat: no-repeat;
