--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ left: 0px;
 .header div{
    padding: 24px;
 }
-.header{
+.header div{
 justify-content: center;
 }
 }
@@ -116,7 +116,7 @@ border-radius: 16px 0 0 16px;
 border-radius: 0 16px 16px 0;
 }
 /*/ HEADER ////////////////////*/
-.header{
+.header div{
 position: relative;
 display: flex;
 align-items: center;
