--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ gap: 24px;
 flex: 1 0 0;
 }
 #posts .post div div{
+min-height: 68px;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
