--- a/index.html
+++ b/index.html
@@ -1,8 +1,44 @@
 <html> 
 <head>
-    <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
-    <meta http-equiv="content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width,	 initial-scale=1.0">
+<meta http-equiv="content-Type" content="text/html; charset=utf-8">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
 /*/ CORE ////////////////////*/
 *, body{
 font-family: Merriweather;
@@ -246,7 +282,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn"></span>
+                        <span class="icn material-icons">Chevron right</span>
                     </div>   
                 </div>
                 <!-- post 1 -->
@@ -257,7 +293,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn"></span>
+                        <span class="icn material-icons">Chevron right</span>
                     </div>   
                 </div>
                 <!-- post 2 -->
@@ -268,7 +304,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn"></span>
+                        <span class="icn material-icons">Chevron right</span>
                     </div>   
                 </div>
                 <!-- post 3 -->
