--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn material-icons">Chevron right</span>
+                        <span class="icn material-icons">chevron_right</span>
                     </div>   
                 </div>
                 <!-- post 1 -->
@@ -293,7 +293,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn material-icons">Chevron right</span>
+                        <span class="icn material-icons">chevron_right</span>
                     </div>   
                 </div>
                 <!-- post 2 -->
@@ -304,7 +304,7 @@ flex-shrink: 0;
                             <h4>Establishing UX Principles</h4>
                             <p>text goes here, max of 2 lines and then elipses?</p>
                         </div>
-                        <span class="icn material-icons">Chevron right</span>
+                        <span class="icn material-icons">chevron_right</span>
                     </div>   
                 </div>
                 <!-- post 3 -->
