--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ color: #000;
 .header{
     color: #FFF;
 }
+#posts .icn{
+color: rgba(0, 0, 0, 0.14);
+}
 /*/ BACKGROUNDS ////////////////////*/
 body{
 background-color: #FFF;
@@ -207,8 +210,8 @@ flex-direction: column;
 align-self: stretch;
 }
 #posts .icn{
-width: 24px;
-height: 24px;
+width: 20px;
+height: 20px;
 }
 /*/ SLIDER ////////////////////*/
 #sliders{
