--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@ left: 12px;
 @media only screen and (max-width: 1024px) {
 .content,
 .header div{
-   padding: 24px;
+   padding: 24px 24px 0 0;
+}
+#posts,
+#sliders{
+padding-right: 24px;
 }
 .header div{
 align-items: center;
