--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ padding-right: 24px;
 .header div{
 align-items: center;
 }
+#showcase .scrollable{
+height: 424px;
+}
 }
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
@@ -224,15 +227,17 @@ flex-direction: column;
 align-items: flex-start;
 gap: 24px;
 }
-#slider div{
-    display: flex;
+#slider > div{
+display: flex;
 flex-direction: column;
 align-items: flex-start;
 gap: 16px;
 }
 .slider{
+width: 100%;
+}
+.slider div{
 display: flex;
-width: 300px;
 padding: 5px 0px;
 align-items: flex-start;
 gap: 18px;
@@ -258,7 +263,7 @@ float: none !important;
 }
 #showcase .scrollable{
 width: 100%;
-height: 800px;
+height: 680px;
 flex-shrink: 0;
 }
 </style>
@@ -322,22 +327,22 @@ flex-shrink: 0;
         <div id="sliders">
             <div id="slidedeck">
               <h3>Portfolio Slides</h3>
-                <div class="slider">
+                <div class="slider"><div>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.png);"></span>
-                </div>
+                </div></div>
             </div>
             <!--  ends -->
             <div id="casestudies">
                 <h3>Case Studies</h3>
-                <div class="slider">
+                <div class="slider"><div>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy1.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy2.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy3.png);"></span>
-                </div>
+                </div></div>
             </div>
             <!-- casestudies ends -->
         </div>
