--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@ left: 12px;
 }
 }
 @media only screen and (max-width: 1024px) {
-.content,
+.content{
+    padding: 24px 24px 0 0;
+}
 .header div{
-   padding: 24px 24px 0 0;
+   padding: 24px 24px 68px 24px;
 }
 #posts,
 #sliders{
