--- a/index.html
+++ b/index.html
@@ -249,8 +249,11 @@ display: flex;
 padding: 5px 0px;
 align-items: flex-start;
 gap: 18px;
-
-  }
+float: none !important;
+white-space: initial;
+display: inline-block;
+vertical-align: top;
+}
  .slider .img,
 .slider img{
 width: 398px;
