--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ left: 12px;
 }
 @media only screen and (max-width: 1024px) {
 .content{
-    padding: 24px 24px 0 0;
+    padding: 24px 0 0 24px;
 }
 .header div{
    padding: 24px 24px 68px 24px;
