--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ max-width: 724px;
 .header div{
    padding-left: 324px!important;
 }
-.header div{
+.header div div{
 height: 274px;
 }
 .header img{
@@ -90,7 +90,7 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 .content{
     padding: 24px 0 0 24px;
 }
-.header div{
+.header div div{
    padding: 24px 24px 68px 24px;
    background-size: 100% auto;
 }
@@ -98,7 +98,7 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 #sliders{
 padding-right: 24px;
 }
-.header div{
+.header div div{
 align-items: center;
 }
 #showcase .scrollable{
