--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@ background-color: #E3E9F0;
 background: url(https://peteroper.github.io/portfolio/assets/imgs/header-bg.png) no-repeat 100% 50%;
 }
 .header div div{
-background: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png) repeat-x 0 101%;
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
+background-repeat: repeat-x;
+background-postion: 0 100%;
 }
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
