--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@ background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, r
 #sliders{
 padding-right: 24px;
 }
+.slider .img,
+.slider img{
+width: 268px;
+
 .header div div{
 align-items: center;
 }
@@ -265,7 +269,8 @@ vertical-align: top;
  .slider .img,
 .slider img{
 width: 398px;
-height: 224px;
+padding-bottom: 52%;
+}
 flex-shrink: 0;
 float: none !important;
     white-space: initial;
