--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ background: url(https://peteroper.github.io/portfolio/assets/imgs/header-bg.png)
 .header div div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
 background-repeat: repeat-x;
-background-postion: 0 100%;
+background-position: 0 100%;
 }
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
