--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-s
 background-repeat: repeat-x;
 background-position: 0 100%;
 }
+.header img{
+    margin: 0 0 12px 0;
+}
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
 }
