--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ width: 268px;
 .header div div{
 align-items: center;
 }
+.header img{
+margin-bottom: 12px;
+}
 #showcase .scrollable{
 height: 424px;
 }
@@ -149,13 +152,13 @@ background-color: #E3E9F0;
 .header{
 background: url(https://peteroper.github.io/portfolio/assets/imgs/header-bg.png) no-repeat 100% 50%;
 }
+.header > div{
+background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
+}
 .header div div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
 background-repeat: repeat-x;
 background-position: 0 100%;
-}
-.header img{
-    margin: 0 0 12px 0;
 }
 #posts .post > div{
 border-bottom: 1px solid rgba(0, 0, 0, 0.14);
