--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ vertical-align: top;
 .slider img{
 width: 398px;
 padding-bottom: 52%;
+display: block;
 }
 flex-shrink: 0;
 float: none !important;
