--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@ background-color: #FFF;
 background-color: #E3E9F0;
 }
 .header{
+background-color: #346672;
+}
+.header{
 background: url(https://peteroper.github.io/portfolio/assets/imgs/header-bg.png) no-repeat 100% 50%;
 }
 .header div div{
@@ -272,7 +275,7 @@ vertical-align: top;
  .slider .img,
 .slider img{
 width: 398px;
-padding-bottom: 52%;
+padding-bottom: 57%;
 display: block;
 }
 flex-shrink: 0;
