--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@ background-color: #E3E9F0;
 }
 .header{
 background-color: #346672;
-background: url(https://peteroper.github.io/portfolio/assets/imgs/header-bg.png) no-repeat 100% 50%;
+background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header.png);
+background-repeat: no-repeat;
+background-position: 100% 50%;
 }
 .header div div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
