--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ background-color: #E3E9F0;
 background-color: #346672;
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header.png);
 background-repeat: no-repeat;
-background-position: 100% 50%;
+background-position: 50% 0;
 }
 .header div div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
