--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ padding-right: 24px;
 }
 .slider .img,
 .slider img{
-width: 268px;
+width: 268px!important;
 }
 .header div div{
 align-items: center;
