--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ align-items: center;
 margin-bottom: 12px;
 }
 #showcase .scrollable{
-height: 424px;
+height: 424px!important;
 }
 .header > div{
 background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53, 103, 115, 0.00) 100%);
