--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ background-size: 125% auto;
    background-size: 100% auto;
 }
 #posts,
-#sliders{
+#intro{
 padding-right: 24px;
 }
 .slider .img,
