--- a/index.html
+++ b/index.html
@@ -70,55 +70,7 @@ margin: 0 0 48px 0;
 #intro{
 max-width: 724px;
 }
-@media only screen and (min-width: 1024px) {
-.content,
-.header div{
-   padding-left: 324px!important;
-}
-.header div div{
-height: 274px;
-}
-.header img{
-position: absolute;
-bottom: 0px;
-left: 12px;
-}
-.header > div{
-background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
-}
-}
-@media only screen and (max-width: 1024px) {
-.content{
-    padding: 24px 0 0 24px;
-}
-.header{
-background-size: 125% auto;
-}
-.header div div{
-   padding: 104px 24px 68px 24px;
-   background-size: 100% auto;
-}
-#posts,
-#intro{
-padding-right: 24px;
-}
-.slider .img,
-.slider img{
-width: 268px!important;
-}
-.header div div{
-align-items: center;
-}
-.header img{
-margin-bottom: 12px;
-}
-#showcase .scrollable{
-height: 424px!important;
-}
-.header > div{
-background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53, 103, 115, 0.00) 100%);
-}
-}
+
 /*/ FONT ////////////////////*/
 h1,h2, h3,h4{
     font-weight: 700;
@@ -210,17 +162,19 @@ display: block;
 margin: 0 0 12px 0;
 }
 /*/ POSTS ////////////////////*/
+#posts .post,
+#posts .post > div{
+gap: 24px;
+}
 #posts .post{
 display: flex;
 padding: 16px 0px;
 align-items: center;
-gap: 24px;
 flex: 1 0 0;
 }
 #posts .post > div{
 display: flex;
 align-items: center;
-gap: 24px;
 flex: 1 0 0;
 }
 #posts .post div div{
@@ -233,7 +187,6 @@ flex: 1 0 0;
 #posts .post .img,
 #posts .post img{
 width: 104px;
-height: 68px;
 display: block;
 }
 #posts p{
@@ -282,12 +235,6 @@ width: 398px;
 padding-bottom: 57%;
 display: block;
 }
-flex-shrink: 0;
-float: none !important;
-    white-space: initial;
-    display: inline-block;
-    vertical-align: top;
-}
 /*/ SHOWCASE ////////////////////*/
 #showcase h3{
     margin: 0 0 12px 0;
@@ -296,6 +243,64 @@ float: none !important;
 width: 100%;
 height: 680px;
 flex-shrink: 0;
+}
+/*/ MEDIA QUERIES ////////////////////*/
+@media only screen and (min-width: 1024px) {
+.content,
+.header div{
+   padding-left: 324px!important;
+}
+.header div div{
+height: 274px;
+}
+.header img{
+position: absolute;
+bottom: 0px;
+left: 12px;
+}
+.header > div{
+background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
+}
+}
+@media only screen and (max-width: 1024px) {
+.content{
+    padding: 24px 0 0 24px;
+}
+.header{
+background-size: 125% auto;
+}
+.header div div{
+   padding: 104px 24px 68px 24px;
+   background-size: 100% auto;
+}
+#posts,
+#intro{
+padding-right: 24px;
+}
+#posts .post .img,
+#posts .post img{
+width: 74px;
+}
+#posts .post,
+#posts .post > div{
+gap: 12px;
+}
+.slider .img,
+.slider img{
+width: 268px!important;
+}
+.header div div{
+align-items: center;
+}
+.header img{
+margin-bottom: 12px;
+}
+#showcase .scrollable{
+height: 424px!important;
+}
+.header > div{
+background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53, 103, 115, 0.00) 100%);
+}
 }
 </style>
 </head>
