--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ flex-direction: column;
 align-items: flex-start;
 gap: 16px;
 }
-.slider div{
+.slider{
 overflow-x: auto;
 overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
@@ -355,22 +355,22 @@ background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53,
         <div id="sliders">
             <div id="slidedeck">
               <h3>Portfolio Slides</h3>
-                <div class="slider"><div>
+                <div class="slider">
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide1.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide2.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide3.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide5.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/slide6.png);"></span>
-                </div></div>
+                </div>
             </div>
             <!--  ends -->
             <div id="casestudies">
                 <h3>Case Studies</h3>
-                <div class="slider"><div>
+                <div class="slider">
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy1.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy2.png);"></span>
                     <span class="img e1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudy3.png);"></span>
-                </div></div>
+                </div>
             </div>
             <!-- casestudies ends -->
         </div>
