--- a/index.html
+++ b/index.html
@@ -214,16 +214,16 @@ gap: 16px;
 .slider{
 overflow-x: auto;
 overflow-y: hidden;
--webkit-overflow-scrolling: touch;
-overflow: -moz-scrollbars-horizontal;
+/*-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;*/
 white-space: nowrap;
 }
  .slider .img,
 .slider img{
 width: 398px;
 padding-bottom: 57%;
-float: none !important;
-white-space: initial;
+/*float: none !important;
+white-space: initial;*/
 display: inline-block;
 vertical-align: top;
 }
