--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ width: 100%;
 height: 680px;
 flex-shrink: 0;
 }
-/*/ MEDIA QUERIES ////////////////////*/
+/*/ MEDIA QUERIES ////////////////////////////////////////*/
 @media only screen and (min-width: 1024px) {
 .content,
 .header div{
@@ -254,6 +254,7 @@ left: 12px;
 background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
 }
 }
+/*////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 1024px) {
 .content{
     padding: 24px 0 0 24px;
@@ -265,7 +266,6 @@ background-size: 125% auto;
    padding: 104px 24px 68px 24px;
    background-size: 100% auto;
 }
-#posts,
 #intro{
 padding-right: 24px;
 }
