--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ max-width: 724px;
 }
 
 /*/ FONT ////////////////////*/
-*, body{
+*, body, p, b, h1, h2, h3, h4{
     font-size: 10px;
 }
 h1,h2, h3,h4{
