--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53,
 }
 /*////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 424px) {
-*, body{
+*, body, p, b, h1, h2, h3, h4{
     font-size: 6px;
 }
 }
