--- a/index.html
+++ b/index.html
@@ -254,6 +254,9 @@ position: absolute;
 bottom: 0px;
 left: 12px;
 }
+.header{
+background-position: 100% 0;
+}
 .header > div{
 background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
 }
