--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ flex-shrink: 0;
 /*/ MEDIA QUERIES ////////////////////////////////////////*/
 @media only screen and (min-width: 1024px) {
 .content,
-.header div{
+.header div div{
    padding-left: 324px!important;
 }
 .header div div{
