--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ max-width: 724px;
 }
 
 /*/ FONT ////////////////////*/
-*, body, p, b, h1, h2, h3, h4{
+*, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
 h1,h2, h3,h4{
@@ -85,6 +85,7 @@ h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.8em; letter-spacing: -1.12px; }
 h4{ font-size: 1.8em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l, p.l b{ font-size: 2.4em; line-height: 140%; letter-spacing: -0.48px; }
+p{ font-size: 1.6em; }
 .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 /*/ STYLE ////////////////////*/
 #posts h4, #posts h4 a{
