--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ h1{ font-size: 4.8em; letter-spacing: -1.92px; }
 h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.8em; letter-spacing: -1.12px; }
 h4{ font-size: 1.8em; font-family: Merriweather; letter-spacing: -0.36px; }
-p.l, p.l b{ font-size: 2.4em; line-height: 140%; letter-spacing: -0.48px; }
+p.l{ font-size: 2.4em; line-height: 140%; letter-spacing: -0.48px; }
 p{ font-size: 1.6em; }
 .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
 /*/ STYLE ////////////////////*/
