--- a/index.html
+++ b/index.html
@@ -287,9 +287,12 @@ padding-right: 24px;
 #posts .post img{
 width: 74px;
 }
-#posts .post,
+#posts .post{
+gap: 12px;    
+}
 #posts .post > div{
-gap: 12px;
+padding-right: 8px;
+gap: 8px;
 }
 .slider .img,
 .slider img{
