--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
+.b{
+    font-weight: bold;
+}
 .img{
     background-repeat: no-repeat;
     background-size: 100% auto;
@@ -325,7 +328,8 @@ background: linear-gradient(0deg, #709097 0%, #406E79 22%, #42707B 68%, rgba(53,
          
         <!-- intro -->
         <div id="intro">
-            <p class="l"><b>Hi I’m Peter, a Product designer with more than 15 years professional experience. </b>I have been creating digital products since the very early days of the internets transition into visual design.</p>
+            <p class="l b">Hi I’m Peter, a Product designer with more than 15 years professional experience.</p>
+            <p class="l">I have been creating digital products since the very early days of the internets transition into visual design.</p>
             <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider. More information on my background in design is covered in my portfolio slideshow</p>
         </div>
         <!-- intro ends -->
