--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@ flex-shrink: 0;
 }
 /*/ INTRO ////////////////////*/
 #intro p{
-margin: 0 0 24px 0;
+margin: 0 0 12px 0;
+}
+#intro p:last-of-type{
+margin: 12px 0 0 0;
 }
 #intro p b{
 display: block;
